--- a/src/app/SharedComponents/header/header.component.html
+++ b/src/app/SharedComponents/header/header.component.html
@@ -1,48 +1,22 @@
-<!--Navbar-->
-<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark indigo">
-
-  <!-- Navbar brand -->
-  <mdb-navbar-brand><a class="navbar-brand" href="#">Navbar</a></mdb-navbar-brand>
-
-  <!-- Collapsible content -->
-  <links>
-
-    <!-- Links -->
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link waves-light" mdbWavesEffect>Home<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link waves-light" mdbWavesEffect>Features</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link waves-light" mdbWavesEffect>Pricing</a>
-      </li>
-
-      <!-- Dropdown -->
-      <li class="nav-item dropdown" dropdown>
-        <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
-          Basic dropdown<span class="caret"></span></a>
-        <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
-          <a class="dropdown-item waves-light" mdbWavesEffect href="#">Action</a>
-          <a class="dropdown-item waves-light" mdbWavesEffect href="#">Another action</a>
-          <a class="dropdown-item waves-light" mdbWavesEffect href="#">Something else here</a>
-          <div class="divider dropdown-divider"></div>
-          <a class="dropdown-item waves-light" mdbWavesEffect href="#">Separated link</a>
-        </div>
-      </li>
-
+<ng-sidebar-container>
+  <!--Sidebar-->
+  <ng-sidebar [opened]="opened">
+    <button class="sidebar-button" (click)="toggleSidebar()" >X</button>
+    <ul class="menu">
+      <li><a routerLink="/home" (click)="toggleSidebar()">HOME</a></li>
+      <li><a routerLink="/accessories" (click)="toggleSidebar()">ACCESSORIES</a></li>
+      <li><a routerLink="/lookbook" (click)="toggleSidebar()">LOOKBOOK</a></li>
+      <li><a routerLink="/blog" (click)="toggleSidebar()">BLOG</a></li>
+      <li><a routerLink="/pages" (click)="toggleSidebar()">PAGES</a></li>
+      <li><a routerLink="/about-us" (click)="toggleSidebar()">ABOUT US</a></li>
+      <li><a routerLink="/contact" (click)="toggleSidebar()">CONTACT</a></li>
     </ul>
-    <!-- Links -->
+  </ng-sidebar>
+  <div ng-sidebar-content >
+    <!--Page Contents-->
+    <button (click)="toggleSidebar()">
+      &#9776;
+    </button>
+  </div>
 
-    <!-- Search form -->
-    <form class="form-inline waves-light" mdbWavesEffect>
-      <div class="md-form my-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search">
-      </div>
-    </form>
-  </links>
-  <!-- Collapsible content -->
-
-</mdb-navbar>
-<!--/.Navbar-->
+</ng-sidebar-container>
