--- a/src/app/SharedComponents/header/header.component.html
+++ b/src/app/SharedComponents/header/header.component.html
@@ -14,7 +14,7 @@
   </ng-sidebar>
   <div ng-sidebar-content >
     <!--Page Contents-->
-    <button (click)="toggleSidebar()">
+    <button class="burger-button" (click)="toggleSidebar()">
       &#9776;
     </button>
   </div>
