--- a/src/app/SharedComponents/header/header.component.css
+++ b/src/app/SharedComponents/header/header.component.css
@@ -5,7 +5,7 @@ ng-sidebar-container{
 ::ng-deep .ng-sidebar {
   background-color: #f4f4f4;
   width: 150px;
-  padding: 2em 3em;
+  padding: 3em 3em;
   box-shadow: 0 0 2.5em rgba(85, 85, 85, 0.5);
 }
 
@@ -16,6 +16,7 @@ ng-sidebar-container{
   border: none;
   background: none;
   display: flex;
+  cursor: pointer;
 }
 
 .sidebar-button:focus {
@@ -43,10 +44,6 @@ ng-sidebar-container{
   background: none;
   border:none;
   color:black;
-  transition: all 0.3s ease 0s;
-  transition-property: all;
-  transition-duration: 0.3s;
-  transition-timing-function: ease;
-  transition-delay: 0s;
   outline: none;
+  cursor: pointer;
 }
