updating the menu section

--- a/src/app/SharedComponents/header/header.component.css
+++ b/src/app/SharedComponents/header/header.component.css
@@ -24,6 +24,7 @@ ng-sidebar-container{
 }
 
 .menu {
+  position: fixed;
   margin-top: 5em;
   font-size: medium;
   display: block;
@@ -35,7 +36,7 @@ ng-sidebar-container{
 .menu li a {
   display: block;
   width: 100%;
-
+  text-decoration: none;
 }
 
 .menu li {
@@ -44,12 +45,8 @@ ng-sidebar-container{
 
 .menu li:hover {
   opacity: 0.6;
-  background-color: #f4511e;
+  background-color: #C8A165;
   width: 100%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  /*transform: translate(-50%, -50%);*/
-  transition: background-position 0.1s ease-out;
 }
 
 .burger-button {
