--- a/src/app/SharedComponents/header/header.component.css
+++ b/src/app/SharedComponents/header/header.component.css
@@ -59,3 +59,13 @@ ng-sidebar-container{
   outline: none;
   cursor: pointer;
 }
+
+.ng-sidebar-content {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  background: #333333;
+  display: flex;
+}
