--- a/src/app/SharedComponents/header/header.component.css
+++ b/src/app/SharedComponents/header/header.component.css
@@ -53,19 +53,16 @@ ng-sidebar-container{
   font-size: 1.5rem;
         /*top left btm  rite*/
   padding: 3% 1% 3% 4%;
-  background: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  background: #f4f4f4;
+  display: flex;
   border:none;
   color:black;
   outline: none;
   cursor: pointer;
 }
 
-.ng-sidebar-content {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 50px;
-  background: #333333;
-  display: flex;
-}
