Adding a top navigation menu bar

--- a/src/app/SharedComponents/header/header.component.css
+++ b/src/app/SharedComponents/header/header.component.css
@@ -15,8 +15,9 @@ ng-sidebar-container{
   color: black;
   border: none;
   background: none;
-  display: flex;
+  display: contents;
   cursor: pointer;
+  margin-top: 9vh;
 }
 
 .sidebar-button:focus {
